--- a/ChessedUp.cbp
+++ b/ChessedUp.cbp
@@ -32,6 +32,26 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="Bishop.h" />
+		<Unit filename="Board.cpp" />
+		<Unit filename="Board.h" />
+		<Unit filename="ComputerPlayer.h" />
+		<Unit filename="Game.cpp" />
+		<Unit filename="Game.h" />
+		<Unit filename="HumanPlayer.h" />
+		<Unit filename="King.h" />
+		<Unit filename="Knight.h" />
+		<Unit filename="Move.cpp" />
+		<Unit filename="Move.h" />
+		<Unit filename="Pawn.h" />
+		<Unit filename="Piece.cpp" />
+		<Unit filename="Piece.h" />
+		<Unit filename="Player.cpp" />
+		<Unit filename="Player.h" />
+		<Unit filename="Queen.h" />
+		<Unit filename="Rook.h" />
+		<Unit filename="Spot.cpp" />
+		<Unit filename="Spot.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
